--- a/lut.28/lut.28/lut.28.csproj
+++ b/lut.28/lut.28/lut.28.csproj
@@ -7,5 +7,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Remove="osoby.txt" />
+    <EmbeddedResource Include="osoby.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
