--- a/2024.09.16/grupa1-Rutkowski-Paweł/grupa1-Rutkowski-Paweł.csproj
+++ b/2024.09.16/grupa1-Rutkowski-Paweł/grupa1-Rutkowski-Paweł.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_2024._09._16</RootNamespace>
+    <RootNamespace>grupa1_Rutkowski_Paweł</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
